@@ -1,31 +1,25 @@
-package de.sub.goobi.helper;
 /**
- * This file is part of the Goobi Application - a Workflow tool for the support of mass digitization.
- * 
- * Visit the websites for more information. 
- *     		- http://www.goobi.org
- *     		- https://github.com/goobi/goobi-production
- * 		    - http://gdz.sub.uni-goettingen.de
- * 			- http://www.intranda.com
- * 			- http://digiverso.com 
- * 
- * This program is free software; you can redistribute it and/or modify it under the terms of the GNU General Public License as published by the Free
- * Software Foundation; either version 2 of the License, or (at your option) any later version.
- * 
- * This program is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the implied warranty of MERCHANTABILITY or
- * FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more details.
- * 
- * You should have received a copy of the GNU General Public License
- * along with this program.  If not, see <http://www.gnu.org/licenses/>.
- * 
- * Linking this library statically or dynamically with other modules is making a combined work based on this library. Thus, the terms and conditions
- * of the GNU General Public License cover the whole combination. As a special exception, the copyright holders of this library give you permission to
- * link this library with independent modules to produce an executable, regardless of the license terms of these independent modules, and to copy and
- * distribute the resulting executable under terms of your choice, provided that you also meet, for each linked independent module, the terms and
- * conditions of the license of that module. An independent module is a module which is not derived from or based on this library. If you modify this
- * library, you may extend this exception to your version of the library, but you are not obliged to do so. If you do not wish to do so, delete this
- * exception statement from your version.
+ * The MIT License (MIT)
+ *
+ * Copyright (c) 2007 Steve Liang
+ *
+ * Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated
+ * documentation files (the "Software"), to deal in the Software without restriction, including without limitation the
+ * rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to
+ * permit persons to whom the Software is furnished to do so, subject to the following conditions:
+ *
+ * The above copyright notice and this permission notice shall be included in all copies or substantial portions of
+ * the Software.
+ *
+ * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO
+ * THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+ * AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT,
+ * TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+ * SOFTWARE.
  */
+
+package de.sub.goobi.helper;
+
 import java.io.Serializable;
 import java.util.List;
 
@@ -48,21 +42,13 @@ import org.hibernate.transform.ResultTransformer;
 /**
  * The source for this code was found at the web address http://laingsolutions.com/joomla/index.php?option=com_content&task=view&id=14&Itemid=1 and
  * changed by retaining the class name of the class which was used to instantiate the current instance of PaginatingCriteria
- * 
- * 
+ *
  * Implementation of Criteria specifically for paginated searches.
- * 
- * When used with HibernatePaginatedList the count() method produces SELECT count(*) SQL for search to query total number of elements.
- * 
- * 
- * 
- * 
- * @see com.sobyteme.pagination.HibernatePaginatedList
+ *
  * @see org.hibernate.Criteria
- * @see org.hibernate.CriteriaImpl
- * 
+ *
  * @author Steve
- * 
+ *
  */
 public class PaginatingCriteria implements Criteria, Serializable {
 	private static final long serialVersionUID = 5298336852980154554L;
@@ -74,7 +60,7 @@ public class PaginatingCriteria implements Criteria, Serializable {
 
 	/**
 	 * Constructor. Create 'real' Criteria and clone Criteria to do row count.
-	 * 
+	 *
 	 * @param clazz
 	 * @param session
 	 */
@@ -88,7 +74,7 @@ public class PaginatingCriteria implements Criteria, Serializable {
 
 	/**
 	 * Used internally.
-	 * 
+	 *
 	 * @param criteria
 	 * @param clone
 	 */
@@ -118,7 +104,7 @@ public class PaginatingCriteria implements Criteria, Serializable {
 
 	/**
 	 * Adds Criterion to both the internal Criteria instances.
-	 * 
+	 *
 	 * @param criterion
 	 * @return Criteria
 	 * @see Criteria#add(org.hibernate.criterion.Criterion)
@@ -140,7 +126,7 @@ public class PaginatingCriteria implements Criteria, Serializable {
 	}
 
 	/**
-	 * @param assocationPath
+	 * @param associationPath
 	 * @param mode
 	 * @return Criteria
 	 * @see Criteria#setFetchMode(java.lang.String, org.hibernate.FetchMode)
@@ -316,7 +302,7 @@ public class PaginatingCriteria implements Criteria, Serializable {
 
 	/**
 	 * Sets a comment on both internal Criteria instances
-	 * 
+	 *
 	 * @param comment
 	 * @return Criteria
 	 * @see Criteria#setComment(java.lang.String)
@@ -387,20 +373,19 @@ public class PaginatingCriteria implements Criteria, Serializable {
 
 	/**
 	 * Gets the row count applicable for this PaginatingCriteria.
-	 * 
-	 * @return
-	 * @return Integer
+	 *
+	 * @return Integer row count
 	 * @throws HibernateException
 	 * @see Criteria#uniqueResult()
 	 */
 	public Integer count() throws HibernateException {
 		Long ur = (Long) this.clone.uniqueResult();
-		return new Integer(ur.intValue());
+		return Integer.valueOf(ur.intValue());
 	}
 
 	/**
 	 * Returns the class name of the class returned by criteria.list()
-	 * 
+	 *
 	 * @return String
 	 */
 	public String getClassName() {
